@@ -9,7 +9,8 @@
 - fix issue128: enable full substitution in install_command,
   thanks for the PR to Ronald Evers
 
-- fix windows parsing/escaping
+- rework and simplify "commands" parsing and in particular posargs
+  substitutions to avoid various win32/posix related quoting issues.
 
 1.6.1
 -----
